--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@
 
   /*==========================================================*/
 
-  .container-Two {
+  .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
