--- a/style.css
+++ b/style.css
@@ -196,3 +196,55 @@
       opacity: 1;
     }
   }
+
+  /*==========================================================*/
+
+  .container-Three {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    text-align: center;
+    overflow: hidden;
+    z-index: 2;
+  }
+
+
+  #slideshow-container {
+    position: relative;
+  }
+
+  .slide {
+    display: none;
+    animation: fadeInOut 5s infinite;
+  }
+
+  .slide img {
+    max-width: 100%;
+  }
+
+  .fade {
+    animation-name: fade;
+    animation-duration: 2s;
+  }
+
+  @keyframes fade {
+    from {
+      opacity: 0.3;
+    }
+
+    to {
+      opacity: 0.3;
+    }
+  }
+
+  @keyframes fadeInOut {
+    from {
+      opacity: 0.3;
+    }
+
+    to {
+      opacity: 0.3;
+    }
+  }
